force-app/main/default/objects/Workspace__c/Workspace__c.object-meta.xml
<CustomObject>
    <label>Workspace</label>
    <nameField>
        <label>Workspace Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workspaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>