force-app/main/default/objects/Workspace__c/fields/Remote_Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>Remote_Resource_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The resource ID returned from Provisioning API.</description>
    <externalId>true</externalId>
    <label>Remote Resource ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>