force-app/main/default/objects/Workspace__c/fields/Resource_Status__c.field-meta.xml
<CustomField>
    <fullName>Resource_Status__c</fullName>
    <description>The status of the resource that makes up the workspace. The workspace can only be opened when in the Running state.</description>
    <label>Resource Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Creating</fullName>
                <default>true</default>
                <label>Creating</label>
            </value>
            <value>
                <fullName>Provisioning</fullName>
            </value>
            <value>
                <fullName>Starting</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Stopped</fullName>
            </value>
            <value>
                <fullName>Deleting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>